fixed url in path

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
 <div class="cofda jmylottery">
     <div class="sounds clearfix">
         <div class="sound" id="123-456-789">
-            <a href="http://webserver.local/activities/jhearnclick/mp3/1.mp3" class="linkSong">Un</a>
+            <a href="demo/media/mp3/1.mp3" class="linkSong">Un</a>
         </div>
         <div class="sound" id="223-456-789">
-            <a href="http://webserver.local/activities/jhearnclick/mp3/2.mp3" class="linkSong">Deux</a>
+            <a href="demo/media/mp3/2.mp3" class="linkSong">Deux</a>
         </div>
         <div class="sound" id="323-456-789">
-            <a href="http://webserver.local/activities/jhearnclick/mp3/3.mp3" class="linkSong">Trois</a>
+            <a href="demo/media/mp3/3.mp3" class="linkSong">Trois</a>
         </div>
         <div class="sound" id="423-456-789">
-            <a href="http://webserver.local/activities/jhearnclick/mp3/4.mp3" class="linkSong">Quatre</a>
+            <a href="demo/media/mp3/4.mp3" class="linkSong">Quatre</a>
         </div>
         <div class="sound" id="523-456-789">
-            <a href="http://webserver.local/activities/jhearnclick/mp3/5.mp3" class="linkSong">Cinq</a>
+            <a href="demo/media/mp3/5.mp3" class="linkSong">Cinq</a>
         </div>
         <div class="progress">
             <span class="current"></span> / <span class="total"></span>
